--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "manga-scraper",
   "version": "1.0.0",
-  "main": "manga.js",
+  "main": "m-scraper.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
